# rust-hsm

./: .gitignore  Cargo.toml  DEMO_PREPARATION.md  LICENSE  OBSERVABILITY_IMPLEMENTATION.md  PROJECT_REVIEW.md  PROJECT_ROADMAP.md  README.md  cleanup-test-tokens.sh  compose.yaml  config.default.toml  config.example.toml  demo-interactive.sh  demo.sh  demo.txt  kryoptic.conf  mechanisms.json  observe-config.toml  test-observe.toml  test.sh  testKryoptic.sh  testSoftHSM.sh
.github/: copilot-instructions.md
.github/workflows/: benchmark.yml  ci.yml  release.yml  security.yml
crates/observe-core/: Cargo.toml
crates/observe-core/src/: event.rs  lib.rs  redaction.rs  sink.rs
crates/observe-cryptoki/: Cargo.toml
crates/observe-cryptoki/src/: config.rs  lib.rs  pkcs11.rs  session.rs
crates/rust-hsm-analyze/: Cargo.toml
crates/rust-hsm-analyze/src/: analyzer.rs  lib.rs  parser.rs
crates/rust-hsm-cli/: Cargo.toml
crates/rust-hsm-cli/examples/: test_observe.rs  test_wrapper.rs
crates/rust-hsm-cli/src/: cli.rs  config.rs  lib.rs  main.rs
crates/rust-hsm-cli/src/commands/: analyze.rs  common.rs  crypto.rs  info.rs  interactive.rs  key_wrap.rs  keys.rs  mac.rs  mod.rs  symmetric.rs  token.rs  util.rs
crates/rust-hsm-cli/src/commands/tui/: app.rs  commands.rs  menu.rs  mod.rs  ui.rs
crates/rust-hsm-cli/src/pkcs11/: audit.rs  benchmark.rs  errors.rs  info.rs  keys.rs  mechanisms.rs  mod.rs  objects.rs  random.rs  slots.rs  token.rs  troubleshoot.rs
crates/rust-hsm-cli/src/pkcs11/keys/: asymmetric.rs  cmac.rs  csr.rs  export.rs  hash.rs  hmac.rs  inspect.rs  keypair.rs  mod.rs  symmetric.rs  utils.rs  wrap.rs
crates/rust-hsm-cli/tests/: README.md  benchmark_tests.rs  tui_integration.rs
crates/rust-hsm-core/: Cargo.toml
crates/rust-hsm-core/src/: lib.rs
crates/rust-hsm-core/src/pkcs11/: audit.rs  benchmark.rs  errors.rs  info.rs  mechanisms.rs  objects.rs  random.rs  slots.rs  token.rs  troubleshoot.rs
crates/rust-hsm-core/src/pkcs11/keys/: asymmetric.rs  cmac.rs  csr.rs  export.rs  hash.rs  hmac.rs  keypair.rs  mod.rs  utils.rs  wrap.rs
dev/bench/: data.js
docker/: Dockerfile  entrypoint.sh  softhsm2.conf
docs/: BENCHMARKING.md  BENCHMARK_IMPROVEMENTS.md  CKR_ERROR_REFERENCE.md  CLI_ARCHITECTURE.md  DOCKER_SETUP.md  GITHUB_ACTIONS.md  IMPLEMENTING_AES_CMAC.md  JSON_OUTPUT_REFERENCE.md  PKCS11_ERROR_CODE_BEHAVIOR.md  PKCS11_SPY_INTEGRATION.md  SWITCHING_HSM_PROVIDERS.md  TROUBLESHOOTING_COMPREHENSIVE.md  TROUBLESHOOTING_EXAMPLE.md
docs/commands/: INTERACTIVE_TUI_STATUS.md  OBSERVABILITY_COMPREHENSIVE.md  README.md  asymmetric-operations.md  hashing-macs.md  information.md  key-generation.md  key-management.md  observability.md  security-utilities.md  symmetric-operations.md  token-management.md  troubleshooting.md
test-data/: encrypt-test.txt  hash-test.txt  test.txt
