[package]
name = "rust-hsm-analyze"
version = "0.1.0"
edition = "2021"

[dependencies]
observe-core = { path = "../observe-core" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"

# Future dependencies (commented out for now)
# ratatui = "0.26"        # TUI framework
# crossterm = "0.27"      # Terminal control
