[package]
name = "rust-hsm-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-hsm-core = { path = "../rust-hsm-core" }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
toml = "0.8"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.13"
assert_cmd = "2.0"
predicates = "3.0"
