[package]
name = "rust-hsm-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-hsm-core = { path = "../rust-hsm-core" }
observe-core = { path = "../observe-core" }
observe-cryptoki = { path = "../observe-cryptoki" }
rust-hsm-analyze = { path = "../rust-hsm-analyze" }
cryptoki = "0.10"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
toml = "0.8"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = { version = "0.28", default-features = false, features = ["crossterm"] }
crossterm = "0.28"

[dev-dependencies]
tempfile = "3.13"
assert_cmd = "2.0"
predicates = "3.0"
serde_json = "1.0"
