[package]
name = "rust-hsm-core"
version = "0.1.0"
edition = "2021"
authors = ["rust-hsm contributors"]
description = "Core PKCS#11 library for HSM operations"
repository = "https://github.com/testingapisname/rust-hsm"
license = "MIT"
keywords = ["hsm", "pkcs11", "cryptography", "hardware-security-module"]
categories = ["cryptography", "api-bindings"]

[dependencies]
cryptoki = "0.10"
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
hex = "0.4"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
simple_asn1 = "0.6"
num-bigint = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
indicatif = "0.17"
sysinfo = "0.30"
